// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardInput component calls onChange 1`] = `
Array [
  Array [
    SyntheticEvent {
      "_dispatchInstances": null,
      "_dispatchListeners": null,
      "_targetInst": null,
      "bubbles": null,
      "cancelable": null,
      "currentTarget": [Function],
      "defaultPrevented": null,
      "dispatchConfig": null,
      "eventPhase": null,
      "isDefaultPrevented": [Function],
      "isPropagationStopped": [Function],
      "isTrusted": null,
      "nativeEvent": null,
      "target": null,
      "timeStamp": [Function],
      "type": null,
    },
  ],
]
`;

exports[`CardInput component renders as checkbox 1`] = `
<div>
  <div
    class="CardInput-root-20"
  >
    <label>
      <input
        class="CardInput-input-21"
        name="tileType"
        type="checkbox"
        value="Aerodek Classic"
      />
      <div
        aria-disabled="false"
        class="MuiButtonBase-root ToggleCard-root-23 CardInput-card-22"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiPaper-root MuiCard-root ToggleCard-body-24 MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            class="ToggleCard-image-28"
            style="background-image: url(path-to-image);"
          />
          <h6
            class="MuiTypography-root ToggleCard-title-25 Typography-root-31 MuiTypography-h6"
            data-testid="typography"
          >
            Aerodek Classic
          </h6>
          <p
            class="MuiTypography-root ToggleCard-paragraph-27 Typography-root-31 MuiTypography-body1"
            data-testid="typography"
          >
            6 colours 
          </p>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`CardInput component renders correctly 1`] = `
<div>
  <div
    class="CardInput-root-1"
  >
    <label>
      <input
        class="CardInput-input-2"
        name="tileType"
        type="radio"
        value="Aerodek Classic"
      />
      <div
        aria-disabled="false"
        class="MuiButtonBase-root ToggleCard-root-4 CardInput-card-3"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiPaper-root MuiCard-root ToggleCard-body-5 MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            class="ToggleCard-image-9"
            style="background-image: url(path-to-image);"
          />
          <h6
            class="MuiTypography-root ToggleCard-title-6 Typography-root-12 MuiTypography-h6"
            data-testid="typography"
          >
            Aerodek Classic
          </h6>
          <p
            class="MuiTypography-root ToggleCard-paragraph-8 Typography-root-12 MuiTypography-body1"
            data-testid="typography"
          >
            6 colours 
          </p>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </label>
  </div>
</div>
`;
